--- a/src/app/mainsite/portfolio/portfolio.component.html
+++ b/src/app/mainsite/portfolio/portfolio.component.html
@@ -18,7 +18,7 @@
           <div class="project-info">
             <h2 class="project-title">Join</h2>
             <p class="project-tech">
-              Angular | TypeScript | HTML | CSS | Firebase
+              JavaScript | HTML | CSS | Firebase
             </p>
             <p class="project-description">
               {{ "PORTFOLIO.JOIN" | translate }}
@@ -84,22 +84,69 @@
 
         <div class="project-card">
           <div class="project-info">
-            <h2 class="project-title"> {{ "PORTFOLIO.TYPO3-TITLE" | translate }}</h2>
+            <h2 class="project-title">Simple-CRM</h2>
+            <p class="project-tech">Angular | HTML | SCSS | TypeScript | Firebase</p>
+            <p class="project-description">
+              {{ "PORTFOLIO.CRM" | translate }}
+            </p>
+            <div class="buttons">
+              <a href="https://crm.miriam-fuchs.net/" target="_blank">
+                <button class="live-btn">Live test</button>
+              </a>
+              <a href="https://github.com/FuchsMiriam/simple-crm" target="_blank">
+                <button class="github-btn">Github</button>
+              </a>
+            </div>
+          </div>
+          <img
+          src="./assets/img/simple_crm.svg"
+          alt="Project Image"
+          class="project-img"
+        />
+        </div>
+
+        <div class="project-card">
+          <img
+          src="./assets/img/webseite.svg"
+          alt="Project Image"
+          class="project-img"
+        />
+          <div class="project-info">
+            <h2 class="project-title">
+              {{ "PORTFOLIO.TYPO3-TITLE" | translate }}
+            </h2>
             <p class="project-tech">TYPO3 | HTML | CSS</p>
             <p class="project-description">
               {{ "PORTFOLIO.TYPO3" | translate }}
             </p>
             <div class="buttons">
-              <a href="https://www.gruene-taunusstein.de/aktuelles" target="_blank"
+              <a
+                href="https://www.gruene-taunusstein.de/aktuelles"
+                target="_blank"
                 ><button class="live-btn">Live test</button></a
               >
             </div>
           </div>
+        </div>
+
+        <div class="project-card">
+          <div class="project-info">
+            <h2 class="project-title">{{ "PORTFOLIO.VOCABULARY-TITLE" | translate }}</h2>
+            <p class="project-tech">C++</p>
+            <p class="project-description">
+              {{ "PORTFOLIO.VOCABULARY" | translate }}
+            </p>
+            <div class="buttons">
+              <a href="https://github.com/FuchsMiriam/vocabulary_trainer" target="_blank">
+                <button class="github-btn">Github</button>
+              </a>
+            </div>
+          </div>
           <img
-            src="./assets/img/webseite.svg"
-            alt="Project Image"
-            class="project-img"
-          />
+          src="./assets/img/vocabulary_trainer.svg"
+          alt="Project Image"
+          class="project-img"
+        />
         </div>
       </div>
     </div>
