changed privacy policy

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,8 +5,8 @@
         <div class="name-left">
           <h1>M<span class="colored-i">i</span>r<span class="colored-i">i</span>a<p>m</p></h1>
           <div class="underline">
-           <!-- <a href="imprint">Impressum</a> -->
             <a (click)="navigateToImprint()">Impressum</a>
+            <a (click)="navigateToPp()">Privacy policy</a>
           </div>
         </div>
         <div class="name-middle">
